# fairino_bridge

./: CMakeLists.txt  README.md  package.xml
launch/: bridge.launch.py
src/: follow_joint_trajectory_server.cpp  joint_state_bridge.cpp
